--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   get: ^4.6.6
   flutter_launcher_icons: ^0.13.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
